--- a/.gitmodules
+++ b/.gitmodules
@@ -1,8 +1,8 @@
 [submodule "xdr/next"]
 	path = xdr/next
-	url = https://github.com/stellar/stellar-xdr
+	url = https://github.com/HashCash-Consultants/hcnet-xdr.git
 	branch = next
 [submodule "xdr/curr"]
 	path = xdr/curr
-	url = https://github.com/stellar/stellar-xdr
+	url = https://github.com/HashCash-Consultants/hcnet-xdr.git
 	branch = curr
